; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_29781.c__zzy.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_29781.c__zzy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_FIXED = common dso_local global i32 0, align 4
@MAP_ANONYMOUS = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"mmap\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zzy() #0 {
  %1 = alloca i8*, align 8
  store i8* null, i8** %1, align 8
  %2 = load i32, i32* @PROT_READ, align 4
  %3 = load i32, i32* @PROT_WRITE, align 4
  %4 = or i32 %2, %3
  %5 = load i32, i32* @MAP_FIXED, align 4
  %6 = load i32, i32* @MAP_ANONYMOUS, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @MAP_PRIVATE, align 4
  %9 = or i32 %7, %8
  %10 = call i8* @mmap(i8* null, i32 4096, i32 %4, i32 %9, i32 0, i32 0)
  store i8* %10, i8** %1, align 8
  %11 = icmp eq i8* %10, inttoptr (i64 -1 to i8*)
  br i1 %11, label %12, label %15

12:                                               ; preds = %0
  %13 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @exit(i32 412) #3
  unreachable

15:                                               ; preds = %0
  ret void
}

declare dso_local i8* @mmap(i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
